--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	    <footer>
 		    Arrow keys to move
 		    Press h to enter hyperspace
+		    Press f to shoot
 	    </footer>
 	</body>
 </html>
